[package]
name = "philharmonic-connector-client"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-client"
description = "Connector-layer lowerer for Philharmonic: decrypts per-tenant endpoint configs, re-encrypts byte-identically to the destination realm's KEM public key, and mints per-step COSE_Sign1 authorization tokens."

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
