[package]
name = "philharmonic-connector-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-client"
description = "Connector-layer lowerer for Philharmonic: decrypts per-tenant endpoint configs, re-encrypts byte-identically to the destination realm's KEM public key, and mints per-step COSE_Sign1 authorization tokens."

[dependencies]
aes-gcm = "0.10"
ciborium = "0.2"
coset = "0.4"
ed25519-dalek = "2"
hkdf = "0.13"
ml-kem = { version = "0.2", features = ["deterministic"] }
philharmonic-connector-common = "0.2"
philharmonic-types = "0.3.5"
rand_core = "0.6"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
